telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestPathInheritance4.java
package tutu.titi.toto;

class H {}

class A {
	static class F {
		class I extends C{}
	}
	static class C extends H{}
}

class B extends A.C{}