telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestScopeFail.java
class A {
	class F {
		class I {}
	}
	class B extends I {} 
}